tests/ui/consts/invalid-inline-const-in-match-arm.stderr
error[E0015]: cannot call non-const closure in constants
  --> $DIR/invalid-inline-const-in-match-arm.rs:5:17
   |
LL |         const { (|| {})() } => {}
   |                 ^^^^^^^^^
   |
   = note: closures need an RFC before allowed to be called in constants
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
